Fix MSVC.net bustage.  Bug 236956, r+sr+a=dbaron